--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ header.fullwidth .container {
   padding: 70px 0px 0px;
   background-color: rgb(255, 255, 255);
   border-top: 1px solid rgba(0, 0, 0, 0.09);
-  font-size: 16px;
+  /* font-size: 16px; */
 }
 
 #footer.sticky-footer {
@@ -4892,14 +4892,14 @@ strong.headline-with-separator,
 
 .boxed-photo-banner p {
   color: rgb(255, 255, 255);
-  opacity: 0.7;
+  opacity: 0.9;
   font-size: 15px;
   margin: 0px 0px 20px;
   display: block;
   font-weight: 300;
 }
 
-.boxed-photo-banner-text .button {}
+
 
 @media (min-width: 375px) and (max-width: 412px) {
   .book-with-cavago h3 strong {
@@ -7451,7 +7451,7 @@ button.fs-map-btn.button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 20px 5px 20px;
+  padding: 0px 20px 10px 20px;
 }
 
 @media (min-width: 375px) and (max-width: 412px) {
